@@ -87,3 +87,10 @@ Moved Progress bar on list view.
 
 16/07/18
 Added Privacy API
+
+23/08/18
+Moved to completion lib for getting course progress which requires alot less work from our end.
+Move progress from :before content to a rendered item
+
+24/08/18
+Added multilang filter support
